# react-native-lingua

./: .env.example  .gitignore  AGENTS.md  README.md  app.config.js  app.json  global.css  jest.config.js  metro.config.js  nativewind-env.d.ts  package-lock.json  package.json  posthog-setup-report.md  skills-lock.json
.claude/skills/: clerk-expo-patterns
.continue/skills/: agent
__tests__/: app-json.test.ts  home-screen.test.tsx  package-json-scripts.test.ts
app/: _layout.tsx  index.test.tsx  index.tsx  language-selection.test.tsx  language-selection.tsx  onboarding.tsx  sso-callback.tsx
app/(tabs)/: _layout.test.tsx  _layout.tsx  ai-teacher.test.tsx  ai-teacher.tsx  chat.test.tsx  chat.tsx  home.test.tsx  home.tsx  learn.test.tsx  learn.tsx  profile.test.tsx  profile.tsx
data/: chat-prompts.ts  languages.ts  lessons.ts  units.ts
prompts/: 01-nativewind.md  03-onboarding-ui.md  05-clerk.md  08-zustand.md  14-vision-agents.md
skills/: agent
src/app/: _layout.tsx  index.tsx
src/components/: posthog-user-identifier.tsx  screen-header.tsx  search-bar.tsx
src/constants/: images.test.ts  images.ts
src/hooks/: use-home-actions.ts  use-home-dashboard.ts  use-learning-navigation.ts  use-lesson-catalog.ts  use-posthog-identify.ts  use-profile-dashboard.ts  use-stream-audio-call.ts
src/lib/: api.ts  chat-interpreter.ts  clerk-auth.ts  lesson-selection.ts  posthog.ts  stream-audio.ts  stream-server.ts
src/store/: language-store.test.ts  language-store.ts  (+2 more)
types/: learning.ts  stream.ts
vision-agent/: .gitignore  README.md  agent.py  pyproject.toml
(+50 files in other folders)
